ProjetCompil/Verif/Test/fail/read.cas
program
	A : array [1..10] of integer;
begin
	read(A) ;
end.